// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GoogleLoginButton > Initialization behavior > is disabled while initializing 1`] = `
<DocumentFragment>
  <button
    aria-busy="true"
    aria-label="Continue with Google"
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
    data-testid="login-button"
    disabled=""
    tabindex="-1"
    type="button"
  >
    Continue with Google
  </button>
  );
</DocumentFragment>
`;

exports[`GoogleLoginButton > i18N behavior > translates the button text in English 1`] = `
<DocumentFragment>
  <button
    aria-label="Continue with Google"
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
    data-testid="login-button"
    tabindex="0"
    type="button"
  >
    Continue with Google
  </button>
</DocumentFragment>
`;

exports[`GoogleLoginButton > i18N behavior > translates the button text in Spanish 1`] = `
<DocumentFragment>
  <button
    aria-label="Continue with Google"
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
    data-testid="login-button"
    tabindex="0"
    type="button"
  >
    Continuar con Google
  </button>
</DocumentFragment>
`;

exports[`GoogleLoginButton > is enabled after initializing 1`] = `
<DocumentFragment>
  <button
    aria-label="Continue with Google"
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
    data-testid="login-button"
    tabindex="0"
    type="button"
  >
    Continue with Google
  </button>
</DocumentFragment>
`;
